Fix text truncation problem

--- a/src/components/Formation/Navigation.css
+++ b/src/components/Formation/Navigation.css
@@ -25,6 +25,7 @@
   display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .nav-bar ul {
@@ -67,6 +68,7 @@
   display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   font-size: 1.5rem;
 }
 
