--- a/src/components/Formation/PreviewSlideList.css
+++ b/src/components/Formation/PreviewSlideList.css
@@ -20,6 +20,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   display: inline-block;
+  white-space: nowrap;
 }
 
 .slide-list-title {
